--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "cross-env": "^5.2.1",
     "nuxt": "^2.9.2",
-    "ts-node": "^8.3.0"
+    "ts-node": "^8.3.0",
+    "vue-highlightjs": "^1.3.3"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.1.11",
